# atuin

./: Cargo.toml  maturin#1372.md  pyproject.toml
alternate/: pyproject.toml
alternate/src/atuin/: __init__.py
desired/rust/tphon/: Cargo.toml
desired/src/tubul/: __init__.py
full/: pyproject.toml
full/rust/tphon/src/: lib.rs
src/: lib.rs
working/: pyproject.toml
working/rust/: Cargo.toml
working/rust/src/: lib.rs
working/src/atuin/: __init__.py
working/src/tubul/: __init__.py
workspace/: pyproject.toml
workspace/rust/: Cargo.toml
workspace/rust/berilia/: Cargo.toml
workspace/rust/tphon/: Cargo.toml
workspace/rust/tphon/src/: lib.rs
workspace/src/atuin/: __init__.py
workspace/src/jerakeen/: __init__.py
